
Balance:
	- Econ Cycle Upgrade is now 7.50% of your current GDP
	- Healthcare/Social Spending are now more expensive for lower GDP/C nations
	- Rebalanced Cost and gain from certain Afghan focuses
	- Rebalanced Afghanistan Tribal Culture to not be too punishing now that other PP
	- Removed mutually exlusives for danish politics as this was corrected incorrectly to begin with

Bugfixes:
	- AFG Our Nation Recovered Bug Taliban Could Not Complete Focus
	- Generic Tree Infrastructure and Radar Station focuses can now be bypasssed
	- Generic Tree Interventionism avaliable for Salafist Outlook
	- Reduced Riau Islands Starting Internet Station to 1
	- Corrected Southern Illinois Incident Typo
	- Demand the Return of the Crimea state corrected
	- Capital of Georgia is now correctly labeled as Tbilisi
	- Fixed land doctrines cost reduction in focus trees
	- Fixed incorrect tag lookup for Moldova in faction checks
	- Corrected a tech path retrieving a tech that doesn't exist
	- Corrected some empty enable_equipments in warheads.txt
	- Removed improper references in French localization to tags that do not exists
	- Fixed Syrian focus "Close PKK Border"'s broken available
	- Fixed Danish Neutral conservatism localization
	- Fixed AI researching 2035 Helicopters in 2015
	- Fixed Brazil and Vietnam non-MTG ships appearing in production
	- Fixed two corvettes missing class for Philippines
	- Fixed Saudi Panavia Tornado IDS to be the right aircraft
	- Fixed electronics tree missing 2025
	- Fixed Brazil localization BRA_global_aligment
	- Miscellaneous organisation
	- Chile now has also Small Arms 1975
	- Fixed duplicate localisation
	- Patched Turkish Socialism leader
	- Fixed manipulate politics as a non-aligned country giving salafist outlook
	- Fixed improper tooltip in military aid section
	- Fixed State will acquire it option in "A large foreign company buys domestic small business" event not having a cost
	- Fixed Iranian Quds focus not giving a faction opinion increase