@@ -499,5 +499,22 @@ ideas = {
 				production_factory_max_efficiency_factor = 0.05
 			}
 		}
+
+		DEN_idea_state_atheism = {
+			on_add = { log = "[GetDateText]: [Root.GetName]: add idea DEN_idea_state_atheism" }
+			picture = communism3 #REPLACEME
+			allowed = {
+				original_tag = DEN
+			}
+			allowed_civil_war = {
+				original_tag = DEN
+			}
+			removal_cost = -1
+			modifier = {
+				political_power_factor = 0.10
+				communism_drift = 0.03
+				stability_factor = 0.02
+			}
+		}
 	}
 }
