@@ -37,8 +37,6 @@ ideas = {
 			allowed = { always = no }
 			allowed_civil_war = { always = no }
 
-			removal_cost = -1
-
 			equipment_bonus = {
 				Inf_equipment = { build_cost_ic = -0.20 instant = yes }
 			}
@@ -50,8 +48,6 @@ ideas = {
 
 			allowed = { always = no }
 			allowed_civil_war = { always = no }
-
-			removal_cost = -1
 
 			equipment_bonus = {
 				destroyer = {
@@ -74,8 +70,6 @@ ideas = {
 			allowed = { always = no }
 			allowed_civil_war = { always = no }
 
-			removal_cost = -1
-
 			modifier = {
 				subversive_activites_upkeep = -0.5
 				land_reinforce_rate = 0.3
@@ -88,8 +82,6 @@ ideas = {
 
 			allowed = { always = no }
 			allowed_civil_war = { always = no }
-
-			removal_cost = -1
 
 			modifier = {
 				conscription_factor = -0.05
@@ -105,7 +97,6 @@ ideas = {
 
 			allowed = { always = no }
 			allowed_civil_war = { always = no }
-			removal_cost = -1
 
 			modifier = {
 				conscription_factor = 0.1
@@ -123,28 +114,9 @@ ideas = {
 			allowed_civil_war = {
 				original_tag = DEN
 			}
-			removal_cost = -1
 			modifier = {
 				stability_factor = 0.05
 				political_power_gain = 0.10
-			}
-		}
-
-		DEN_idea_state_atheism = {
-			on_add = { log = "[GetDateText]: [Root.GetName]: add idea DEN_idea_state_atheism" }
-			picture = communism3
-			allowed = {
-				original_tag = DEN
-				has_completed_focus = DEN_state_atheism
-			}
-			allowed_civil_war = {
-				original_tag = DEN
-			}
-			removal_cost = -1
-			modifier = {
-				political_power_factor = 0.10
-				communism_drift = 0.03
-				stability_factor = 0.02
 			}
 		}
 
@@ -158,7 +130,6 @@ ideas = {
 			allowed_civil_war = {
 				original_tag = DEN
 			}
-			removal_cost = -1
 			modifier = {
 				political_power_factor = 0.10
 				neutrality_drift = 0.05
@@ -171,8 +142,6 @@ ideas = {
 
 			allowed = { always = no }
 			allowed_civil_war = { always = no }
-
-			removal_cost = -1
 
 			modifier = {
 				industrial_capacity_factory = -0.15
@@ -192,8 +161,6 @@ ideas = {
 		 allowed = { always = no }
 		 allowed_civil_war = { always = no }
 
-		 removal_cost = -1
-
 		 modifier = {
 			production_speed_synthetic_refinery_factor = -0.50
 			 consumer_goods_factor = -0.01
@@ -206,8 +173,6 @@ ideas = {
 
 			allowed = { always = no }
 			allowed_civil_war = { always = no }
-
-			removal_cost = -1
 
 			modifier = {
 				research_speed_factor = 0.10
@@ -224,8 +189,6 @@ ideas = {
 			allowed = { always = no }
 			allowed_civil_war = { always = no }
 
-			removal_cost = -1
-
 			modifier = {
 				army_core_defence_factor = 0.30
 				army_core_attack_factor = 0.30
@@ -239,7 +202,7 @@ ideas = {
 			picture = puppet_industry
 			allowed = { always = no }
 			allowed_civil_war = { always = yes }
-			removal_cost = -1
+			
 			modifier = {
 				stability_factor = 0.1
 				conscription_factor = 0.05
@@ -252,7 +215,7 @@ ideas = {
 			picture = foreign_capital
 			allowed = { always = no }
 			allowed_civil_war = { always = yes }
-			removal_cost = -1
+			
 			modifier = {
 				drift_defence_factor = 0.15
 				production_speed_arms_factory_factor = 0.15
@@ -264,7 +227,7 @@ ideas = {
 			picture = positive_gold
 			allowed = { always = no }
 			allowed_civil_war = { always = yes }
-			removal_cost = -1
+			
 			modifier = {
 				consumer_goods_factor = -0.06
 			}
@@ -280,7 +243,7 @@ ideas = {
 			allowed_civil_war = {
 				original_tag = DEN
 			}
-			removal_cost = -1
+			
 			modifier = {
 				political_power_factor = -0.02
 				nationalist_drift = 0.05
@@ -301,7 +264,7 @@ ideas = {
 			allowed_civil_war = {
 				original_tag = DEN
 			}
-			removal_cost = -1
+			
 			modifier = {
 				nationalist_drift = 0.05
 				army_defence_factor = 0.05
@@ -323,7 +286,7 @@ ideas = {
 			allowed_civil_war = {
 				original_tag = DEN
 			}
-			removal_cost = -1
+			
 			modifier = {
 			production_speed_arms_factory_factor = 0.05
 			industrial_capacity_factory = 0.05
@@ -341,10 +304,30 @@ ideas = {
 			allowed_civil_war = {
 				original_tag = DEN
 			}
-			removal_cost = -1
+			
 			modifier = {
 				communism_drift = 0.10
 				fascism_drift = -0.05
+				guarantee_cost = -0.5
+			}
+		}
+
+		DEN_communist_gains2 = {
+			on_add = { log = "[GetDateText]: [Root.GetName]: add idea DEN_communist_gains" }
+			picture = communism5
+			allowed = {
+				original_tag = DEN
+				has_completed_focus = DEN_broken_system
+			}
+			allowed_civil_war = {
+				original_tag = DEN
+			}
+			
+			modifier = {
+				communism_drift = 0.10
+				fascism_drift = -0.05
+				guarantee_cost = -0.5
+				justify_war_goal_time = -0.25
 			}
 		}
 
@@ -358,7 +341,7 @@ ideas = {
 			allowed_civil_war = {
 				original_tag = DEN
 			}
-			removal_cost = -1
+			
 			modifier = {
 				monthly_population = 0.6
 			}
@@ -373,7 +356,7 @@ ideas = {
 			allowed_civil_war = {
 				original_tag = DEN
 			}
-			removal_cost = -1
+			
 			modifier = {
 				monthly_population = 0.2
 			}
@@ -433,6 +416,63 @@ ideas = {
 			modifier = {
 				industrial_capacity_factory = 0.15
 				local_resources_factor = 0.25
+			}
+		}
+		DEN_idea_multiculturalism = {
+			on_add = { log = "[GetDateText]: [Root.GetName]: add idea DEN_idea_streamline_infantry_production" }
+			picture = progressivism
+
+			allowed = { always = no }
+			allowed_civil_war = { always = no }
+
+			modifier = {
+				global_building_slots_factor = 0.05
+			}
+		}
+		DEN_idea_strict_immigration_law = {
+			on_add = { log = "[GetDateText]: [Root.GetName]: add idea DEN_idea_streamline_infantry_production" }
+			picture = segregation
+
+			allowed = { always = no }
+			allowed_civil_war = { always = no }
+
+			modifier = {
+				monthly_population = -0.05
+			}
+		}
+		DEN_idea_strict_immigration_law2 = {
+			on_add = { log = "[GetDateText]: [Root.GetName]: add idea DEN_idea_streamline_infantry_production" }
+			picture = segregation2
+
+			allowed = { always = no }
+			allowed_civil_war = { always = no }
+
+			modifier = {
+				monthly_population = -0.05
+				nationalist_drift = 0.05
+			}
+		}
+		DEN_idea_unemployment_benefits = {
+			on_add = { log = "[GetDateText]: [Root.GetName]: add idea DEN_idea_streamline_infantry_production" }
+			picture = worker_reforms
+
+			allowed = { always = no }
+			allowed_civil_war = { always = no }
+
+			modifier = {
+				population_tax_income_multiplier_modifier = 0.05
+				consumer_goods_factor = 0.03
+			}
+		}
+		DEN_idea_offentlighedsloven = {
+			on_add = { log = "[GetDateText]: [Root.GetName]: add idea DEN_idea_streamline_infantry_production" }
+			picture = GENERIC_idea_protectionism
+
+			allowed = { always = no }
+			allowed_civil_war = { always = no }
+
+			modifier = {
+				foreign_influence_defense_modifier = 0.20
 			}
 		}
 	}
