@@ -17,14 +17,14 @@
 		x = 0
 		y = 0
 
-		cost = 10
+		cost = 5
 		available = {
 			NOT = { has_idea = no_military }
 		}
 
 		completion_reward = {
 			log = "[GetDateText]: [Root.GetName]: Focus DEN_army"
-			army_experience = 20
+			army_experience = 50
 			increase_military_spending = yes
 
 			# Updates The Military factions
@@ -47,7 +47,7 @@
 		y = 1
 		relative_position_id = DEN_army
 
-		cost = 10
+		cost = 5
 
 		prerequisite = { focus = DEN_army }
 		available = {
@@ -55,9 +55,8 @@
 		}
 		completion_reward = {
 			log = "[GetDateText]: [Root.GetName]: Focus DEN_hacker_recruitment_drive"
-			add_war_support = 0.02
-			add_political_power = 50
-			army_experience = 10
+			add_war_support = 0.05
+			army_experience = 50
 		}
 
 		ai_will_do = {
@@ -102,7 +101,7 @@
 		y = 1
 		relative_position_id = DEN_army
 
-		cost = 10
+		cost = 5
 
 		prerequisite = { focus = DEN_army }
 		available = {
@@ -173,6 +172,12 @@
 				uses = 1
 				technology = night_vision_4
 			}
+			add_tech_bonus = {
+				name = DEN_SOF
+				bonus = 0.25
+				Category = Cat_SPECIAL_FORCES
+				uses = 1
+				}
 			set_temp_variable = { treasury_change = -3 }
 			modify_treasury_effect = yes
 		}
@@ -190,7 +195,7 @@
 		y = 4
 		relative_position_id = DEN_army
 
-		cost = 10
+		cost = 8
 
 		prerequisite = { focus = DEN_develop_artillery_models }
 		prerequisite = { focus = DEN_close_Frederiksberg_Have }
@@ -216,7 +221,7 @@
 		y = 5
 		relative_position_id = DEN_army
 
-		cost = 10
+		cost = 8
 
 		prerequisite = { focus = DEN_expand_barracks }
 
@@ -245,7 +250,7 @@
 		y = 3
 		relative_position_id = DEN_army
 
-		cost = 5
+		cost = 2
 
 		prerequisite = {
 			focus = DEN_develop_artillery_models
@@ -307,7 +312,7 @@
 		y = 5
 		relative_position_id = DEN_army
 
-		cost = 10
+		cost = 8
 
 		prerequisite = { focus = DEN_liquidate_old_stockpiles }
 		available = {
@@ -318,8 +323,8 @@
 			add_doctrine_cost_reduction = {
 				name = land_doctrine
                 category = land_doctrine
-                uses = 1
-                cost_reduction = 0.5
+                uses = 2
+                cost_reduction = 0.25
             }
 		}
 
@@ -336,7 +341,7 @@
 		y = 6
 		relative_position_id = DEN_army
 
-		cost = 10
+		cost = 5
 
 		prerequisite = { focus = DEN_close_Frederiksberg_Have }
 		available = {
@@ -367,14 +372,14 @@
 		x = 4
 		y = 0
 
-		cost = 10
+		cost = 6
 
 		available = {
 			NOT = { has_idea = no_military }
 		}
 		completion_reward = {
 			log = "[GetDateText]: [Root.GetName]: Focus DEN_royal_navy"
-			navy_experience = 20
+			navy_experience = 50
 		}
 
 		ai_will_do = {
@@ -500,7 +505,7 @@
 		icon = city_fort
 
 		x = 2
-		y = 5
+		y = 4
 		relative_position_id = DEN_royal_navy
 
 		cost = 7
@@ -547,7 +552,8 @@
 					instant_build = yes
 				}
 			}
-
+			set_temp_variable = { treasury_change = -4 }
+			modify_treasury_effect = yes
 		}
 
 		ai_will_do = {
@@ -563,7 +569,7 @@
 		x = 9
 		y = 0
 
-		cost = 10
+		cost = 8
 
 		available = {
 			NOT = { has_idea = no_military }
@@ -574,8 +580,8 @@
 			air_experience = 20
 			add_tech_bonus = {
 				name = fighter_bonus
-				bonus = 0.3
-				uses = 1
+				bonus = 0.25
+				uses = 2
 				category = Cat_FIGHTER
 			}
 		}
@@ -592,7 +598,7 @@
 		y = 1
 		relative_position_id = DEN_air_force
 
-		cost = 10
+		cost = 8
 
 		prerequisite = { focus = DEN_air_force }
 		available = { NOT = { has_idea = no_military } }
@@ -621,7 +627,7 @@
 		y = 2
 		relative_position_id = DEN_air_force
 
-		cost = 4
+		cost = 2
 
 		prerequisite = {
 			focus = DEN_refurbish_air_force_officers_school
@@ -668,7 +674,7 @@
 		y = 2
 		relative_position_id = DEN_air_force
 
-		cost = 4
+		cost = 2
 
 		prerequisite = { focus = DEN_refurbish_air_force_officers_school }
 		available = {
@@ -714,7 +720,7 @@
 		y = 3
 		relative_position_id = DEN_royal_navy
 
-		cost = 10
+		cost = 8
 
 		prerequisite = { focus = DEN_infantry_equipment_models_1 }
 		prerequisite = { focus = DEN_establish_OPLOG_FRH }
@@ -723,9 +729,9 @@
 
 		completion_reward = {
 			log = "[GetDateText]: [Root.GetName]: Focus DEN_establish_VFK"
-			army_experience = 10
-			navy_experience = 10
-			air_experience = 10
+			army_experience = 30
+			navy_experience = 30
+			air_experience = 30
 		}
 
 		ai_will_do = {
@@ -795,7 +801,7 @@
 
 		completion_reward = {
 			log = "[GetDateText]: [Root.GetName]: Focus DEN_renew_foreign_contracts"
-			country_event = { id = denmark.4 days = 1 }
+			country_event = { id = denmark.4 days = 1 } #REPLACEME i have no idea what this is and what is going on
 		}
 
 		ai_will_do = {
@@ -852,7 +858,7 @@
 		x = 18
 		y = 0
 
-		cost = 10
+		cost = 6
 		completion_reward = {
 			log = "[GetDateText]: [Root.GetName]: Focus DEN_abolish_amts"
 			add_stability = 0.02
@@ -872,7 +878,7 @@
 		y = 1
 		relative_position_id = DEN_abolish_amts
 
-		cost = 10
+		cost = 8
 
 		prerequisite = { focus = DEN_abolish_amts }
 		mutually_exclusive = { focus = DEN_empower_regions }
@@ -899,7 +905,7 @@
 		y = 1
 		relative_position_id = DEN_abolish_amts
 
-		cost = 10
+		cost = 8
 
 		prerequisite = { focus = DEN_abolish_amts }
 		mutually_exclusive = { focus = DEN_empower_municipalities }
@@ -1089,7 +1095,7 @@
 		y = 2
 		relative_position_id = DEN_abolish_amts
 
-		cost = 10
+		cost = 5
 
 		prerequisite = { focus = DEN_empower_regions }
 
@@ -1243,7 +1249,7 @@
 					instant_build = yes
 				}
 			}
-			set_temp_variable = { treasury_change = -15 }
+			set_temp_variable = { treasury_change = -16 }
 			modify_treasury_effect = yes
 		}
 
@@ -1314,7 +1320,7 @@
 		y = 4
 		relative_position_id = DEN_abolish_amts
 
-		cost = 10
+		cost = 5
 
 		prerequisite = { focus = DEN_revitalize_the_outskirts }
 		completion_reward = {
@@ -1353,7 +1359,7 @@
 					instant_build = yes
 				}
 			}
-			set_temp_variable = { treasury_change = -15 }
+			set_temp_variable = { treasury_change = -16 }
 			modify_treasury_effect = yes
 		}
 
@@ -1393,7 +1399,7 @@
 				}
 			}
 
-			set_temp_variable = { treasury_change = -15 }
+			set_temp_variable = { treasury_change = -16 }
 			modify_treasury_effect = yes
 		}
 
@@ -1426,7 +1432,7 @@
 					instant_build = yes
 				}
 			}
-			set_temp_variable = { treasury_change = -24 }
+			set_temp_variable = { treasury_change = -25 }
 			modify_treasury_effect = yes
 		}
 
@@ -1609,7 +1615,7 @@
 					instant_build = yes
 				}
 			}
-			set_temp_variable = { treasury_change = -7.5 }
+			set_temp_variable = { treasury_change = -8.5 }
 			modify_treasury_effect = yes
 		}
 
@@ -2910,7 +2916,7 @@
 		y = 1
 		relative_position_id = DEN_the_greatest_challenge
 
-		cost = 10
+		cost = 8
 
 		prerequisite = {
 			focus = DEN_the_greatest_challenge
@@ -3003,7 +3009,7 @@
 				limit = { has_idea = social_01 }
 				add_political_power = 150	#if country has desired level it earns political power instead.
 			}
-			set_temp_variable = { treasury_change = 5 }
+			set_temp_variable = { treasury_change = 15 }
 			modify_treasury_effect = yes
 		}
 
@@ -3172,7 +3178,7 @@
 		y = 4
 		relative_position_id = DEN_welfare_state
 
-		cost = 10
+		cost = 8
 
 		prerequisite = {
 			focus = DEN_appease_unions
@@ -3185,12 +3191,12 @@
 			nationalist_right_wing_populists_are_not_in_power = yes
 		}
 
-			bypass = {}
+		bypass = {}
 
 		completion_reward = {
 			log = "[GetDateText]: [Root.GetName]: Focus DEN_embrace_multiculturalism"
-			add_stability = 0.05
-			add_war_support = -0.05
+			add_stability = -0.05
+			add_ideas = DEN_idea_multiculturalism 
 		}
 
 		ai_will_do = {
@@ -3206,7 +3212,7 @@
 		y = 5
 		relative_position_id = DEN_welfare_state
 
-		cost = 10
+		cost = 3
 
 		prerequisite = {
 			focus = DEN_the_retirement_reform
@@ -3227,6 +3233,7 @@
 				limit = { has_idea = bureau_05 }
 				add_political_power = 150	#if country has desired level it earns political power instead.
 			}
+			add_political_power = 50
 		}
 
 		ai_will_do = {
@@ -3242,7 +3249,7 @@
 		y = 5
 		relative_position_id = DEN_welfare_state
 
-		cost = 10
+		cost = 3
 
 		prerequisite = {
 			focus = DEN_expand_public_transportation
@@ -3263,6 +3270,7 @@
 				limit = { has_idea = bureau_01 }
 				add_political_power = 150	#if country has desired level it earns political power instead.
 			}
+			add_political_power = 150
 		}
 
 		ai_will_do = {
@@ -3311,7 +3319,7 @@
 		y = 6
 		relative_position_id = DEN_welfare_state
 
-		cost = 10
+		cost = 8
 
 		prerequisite = {
 			focus = DEN_embrace_multiculturalism
@@ -3327,8 +3335,7 @@
 
 		completion_reward = {
 			log = "[GetDateText]: [Root.GetName]: Focus DEN_refugees_welcome"
-			add_manpower = 30000
-			add_stability = -0.10
+			add_stability = -0.05
 			add_ideas = DEN_idea_refugees_welcome
 		}
 
@@ -3447,8 +3454,9 @@
 
 		completion_reward = {
 			log = "[GetDateText]: [Root.GetName]: Focus DEN_offentlighedsloven"
-			add_political_power = 500
-			add_stability = -0.03
+			add_political_power = 100
+			add_stability = 0.05
+			add_ideas = DEN_idea_offentlighedsloven
 		}
 
 		ai_will_do = {
@@ -3465,7 +3473,7 @@
 		y = 1
 		relative_position_id = DEN_the_greatest_challenge
 
-		cost = 10
+		cost = 8
 
 		prerequisite = { focus = DEN_the_greatest_challenge }
 
@@ -3484,7 +3492,8 @@
 
 		completion_reward = {
 			log = "[GetDateText]: [Root.GetName]: Focus DEN_Danish_culture"
-			add_political_power = -100
+			add_political_power = 100
+			add_stability = 0.05
 		}
 
 		ai_will_do = {
@@ -3524,6 +3533,7 @@
 			add_popularity = { ideology = nationalist popularity = 0.03 }
 			recalculate_party = yes
 			add_stability = 0.03
+			add_ideas = DEN_idea_strict_immigration_law
 		}
 
 		ai_will_do = {
@@ -3539,7 +3549,7 @@
 		y = 2
 		relative_position_id = DEN_Danish_culture
 
-		cost = 10
+		cost = 5
 
 		prerequisite = {
 			focus = DEN_restrict_immigration
@@ -3558,8 +3568,11 @@
 
 		completion_reward = {
 			log = "[GetDateText]: [Root.GetName]: Focus DEN_outlaw_hijab"
-			add_political_power = 100
-			add_popularity = { ideology = nationalist popularity = 0.02 }
+			swap_ideas = {
+				remove_idea = DEN_idea_strict_immigration_law 
+				add_idea = DEN_idea_strict_immigration_law2
+			}
+			add_popularity = { ideology = nationalist popularity = 0.05 }
 			recalculate_party = yes
 		}
 
@@ -3616,7 +3629,7 @@
 		y = 3
 		relative_position_id = DEN_Danish_culture
 
-		cost = 10
+		cost = 8
 
 		prerequisite = {
 			focus = DEN_outlaw_hijab
@@ -3642,6 +3655,10 @@
 			add_popularity = { ideology = nationalist popularity = 0.01 }
 			recalculate_party = yes
 			add_stability = 0.02
+			swap_ideas = {
+				remove_idea = industrial_conglomerates
+				add_idea = The_clergy
+			}
 		}
 
 		ai_will_do = {
@@ -3657,7 +3674,7 @@
 		y = 4
 		relative_position_id = DEN_Danish_culture
 
-		cost = 10
+		cost = 12
 
 		prerequisite = {
 			focus = DEN_fund_national_church
@@ -3679,6 +3696,8 @@
 			add_stability = 0.05
 			add_popularity = { ideology = nationalist popularity = 0.02 }
 			recalculate_party = yes
+			set_temp_variable = { temp_opinion = 10 } 
+			change_the_clergy_opinion = yes
 		}
 
 		ai_will_do = {
@@ -4049,7 +4068,7 @@
 		x = -4
 		y = 1
 		relative_position_id = DEN_the_greatest_challenge
-		cost = 15
+		cost = 8
 
 		prerequisite = { focus = DEN_the_greatest_challenge }
 
@@ -4062,8 +4081,6 @@
 
 		completion_reward = {
 			log = "[GetDateText]: [Root.GetName]: Focus DEN_broken_system"
-			add_political_power = -200
-			add_stability = -0.05
 			add_ideas = DEN_communist_gains
 			#unlock_decision_category_tooltip = decision_category_danish_revolutionary_thought
 		}
@@ -4092,7 +4109,7 @@
 			NOT = { has_idea = EU_member }
 		}
 		completion_reward = {
-			log = "[GetDateText]: [Root.GetName]: Focus DEN_declare_martial_law"
+			log = "[GetDateText]: [Root.GetName]: Focus DEN_declare_martial_law" #REPLACEME i have no idea if this works or if this focus should be this long
 			country_event = { id = denmark.9 days = 1 }
 		}
 
@@ -4164,7 +4181,7 @@
 		y = 2
 		relative_position_id = DEN_broken_system
 
-		cost = 10
+		cost = 8
 
 		prerequisite = { focus = DEN_fight_nationalists }
 		prerequisite = { focus = DEN_declare_martial_law }
@@ -4175,8 +4192,12 @@
 
 		completion_reward = {
 			log = "[GetDateText]: [Root.GetName]: Focus DEN_trigger_the_elections"
-			add_stability = 0.10
-			add_war_support = 0.10
+			add_stability = 0.05
+			add_war_support = 0.05
+			swap_ideas = {
+				remove_idea = DEN_communist_gains
+				add_idea = DEN_communist_gains2
+			}
 		}
 
 		ai_will_do = {
@@ -4298,7 +4319,7 @@
 		y = 5
 		relative_position_id = DEN_broken_system
 
-		cost = 10
+		cost = 5
 
 		prerequisite = { focus = DEN_state_atheism }
 		mutually_exclusive = { focus = DEN_seize_state_power }
@@ -4310,8 +4331,8 @@
 
 		completion_reward = {
 			log = "[GetDateText]: [Root.GetName]: Focus DEN_peaceful_revolution"
-			add_war_support = -0.1
-			add_stability = 0.15
+			add_war_support = -0.05
+			add_stability = 0.10
 		}
 
 		ai_will_do = {
@@ -4327,7 +4348,7 @@
 		y = 6
 		relative_position_id = DEN_broken_system
 
-		cost = 10
+		cost = 9
 
 		prerequisite = {
 			focus = DEN_peaceful_revolution
@@ -4343,10 +4364,8 @@
 
 		completion_reward = {
 			log = "[GetDateText]: [Root.GetName]: Focus DEN_raise_unemployment_benefits"
-			add_political_power = 100
-			add_stability = 0.03
-			set_temp_variable = { treasury_change = -5 }
-			modify_treasury_effect = yes
+			add_stability = 0.05
+			add_ideas = DEN_idea_unemployment_benefits
 		}
 
 		ai_will_do = {
@@ -4362,7 +4381,7 @@
 		y = 7
 		relative_position_id = DEN_broken_system
 
-		cost = 10
+		cost = 6
 
 		prerequisite = {
 			focus = DEN_raise_unemployment_benefits
@@ -4394,7 +4413,7 @@
 		y = 8
 		relative_position_id = DEN_broken_system
 
-		cost = 10
+		cost = 5
 
 		prerequisite = { focus = DEN_improve_public_sector }
 
@@ -4494,7 +4513,7 @@
 		y = 6
 		relative_position_id = DEN_broken_system
 
-		cost = 10
+		cost = 8
 
 		prerequisite = {
 			focus = DEN_seize_state_power
@@ -4509,11 +4528,16 @@
 		completion_reward = {
 			log = "[GetDateText]: [Root.GetName]: Focus DEN_crackdown_on_opposition"
 			add_stability = -0.05
-			add_ideas = idea_focus_expanded_secret_services
 			add_popularity = { ideology = neutrality popularity = -0.05 }
 			add_popularity = { ideology = nationalist popularity = -0.05 }
 			add_popularity = { ideology = democratic popularity = -0.05 }
-
+			
+			if = { limit = { has_dlc = "La Resistance" }
+				add_ideas = idea_focus_expanded_secret_services_lar
+			}
+			else = {
+				add_ideas = idea_focus_expanded_secret_services
+			}
 		}
 
 		ai_will_do = {
@@ -4538,7 +4562,6 @@
 		prerequisite = { focus = DEN_state_atheism }
 
 		available = {
-			NOT = { has_idea = EU_member }
 			emerging_communist_state_are_in_power = yes
 		}
 
