@@ -723,6 +723,18 @@
  DEN_idea_DISA_desc: ""
  DEN_idea_conservative: "Conservative Society"
  DEN_idea_conservative_desc: ""
+ DEN_idea_multiculturalism: "Housing Projects"
+ DEN_idea_multiculturalism_desc: ""
+ DEN_idea_strict_immigration_law: "Strict Immigration Laws"
+ DEN_idea_strict_immigration_law_desc: ""
+ DEN_idea_strict_immigration_law2: "Anti Muslim Law"
+ DEN_idea_strict_immigration_law2_desc: ""
+ DEN_communist_gains2: "Spreading Communism"
+ DEN_communist_gains2_desc: ""
+ DEN_idea_unemployment_benefits: "Unemployment Benefits"
+ DEN_idea_unemployment_benefits_desc: ""
+ DEN_idea_offentlighedsloven: "Offentlighedsloven"
+ DEN_idea_offentlighedsloven_desc: ""
 
 #Decisions
  find_resources: "Denmark's lacking resources"
