@@ -8,6 +8,9 @@ Balance:
 	- Rebalanced Cost and gain from certain Afghan focuses
 	- Rebalanced Afghanistan Tribal Culture to not be too punishing now that other PP
 	- Removed mutually exlusives for danish politics as this was corrected incorrectly to begin with
+	- Redid focus completion times for Denmark.
+	- Rebalanced focus rewards for Denmark.
+	- Made it less shit to be conservative/nationalist or communist in Denmark
 
 Bugfixes:
 	- AFG Our Nation Recovered Bug Taliban Could Not Complete Focus
